--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" class="h-100">
 
 <head>
+  <meta name="author" content="Álvaro Barros">
+  <link rel="icon" type="image/png" href="./img/favicon.png" />
+
   <!-- Primary Meta Tags -->
   <title>Bolsonaro 2º Turno — Gerar flyer de apoio ao Bolsonaro com seu nome</title>
   <meta name="title" content="Bolsonaro 2º Turno — Gerar flyer de apoio ao Bolsonaro com seu nome" />
@@ -22,425 +25,114 @@
   <meta property="twitter:title" content="Bolsonaro 2º Turno — Gerar flyer de apoio ao Bolsonaro com seu nome" />
   <meta property="twitter:description"
     content="Gere seu flyer personalizado com seu nome de apoio ao Bolsonaro para o segundo turno das eleições brasileira" />
-  <meta property="twitter:image" content="https://alvaroreis.github.io/bolsonaro2turno/img/metadata.png" />
+  <meta property="twitter:image" content="https://alvaroreis.github.io/bolsonaro2turno/metadata.png" />
 
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lula 2° Turno</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans&display=swap" rel="stylesheet" />
 
-  <style>
-    body {
-      background-color: rgb(21, 21, 21);
-      font-size: 18px;
-      margin: 0;
-      font-family: "Open Sans", sans-serif;
-    }
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
-    .container {
-      width: 90%;
-      max-width: 800px;
-      margin: 0 auto;
-      text-align: center;
-    }
-
-    .container input {
-      font-size: 1rem;
-      border-radius: 0.4rem;
-      padding: 0.5rem 1rem;
-      margin: 1rem 0;
-      border: 1px solid grey;
-    }
-
-    .container button {
-      font-size: 1rem;
-      border-radius: 0.4rem;
-      padding: 0.5rem 1rem;
-      margin: 1rem 0;
-      border-width: 0;
-      border-bottom: 2px solid rgb(9, 99, 37);
-      background-color: #107b29;
-      color: white;
-      cursor: pointer;
-    }
-
-    .container canvas {
-      display: block;
-      width: 80%;
-      margin: 0 auto;
-      margin-bottom: 1rem;
-    }
-
-    .container footer {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-bottom: 1rem;
-      row-gap: 0.5rem;
-    }
-
-    .container footer a {
-      color: #f5c012;
-      text-decoration: none;
-      column-gap: 0.25rem;
-    }
-
-    .container footer a {
-      display: flex;
-      align-items: center;
-    }
-
-    .container footer a img {
-      height: 1.5rem;
-    }
-
-    .container footer a img.profile {
-      border-radius: 50%;
-    }
-
-    .container smartphone {
-      display: block;
-      color: #1da60e;
-      margin: 2rem 0;
-      font-weight: bold;
-    }
-
-    .container smartphone input {
-      height: 1.75rem;
-      margin: 0;
-      padding: 0 0.5rem;
-      box-sizing: border-box;
-      font-size: 1rem;
-      border: 1px solid #f5c012;
-      background-color: transparent;
-      color: #f5c012;
-      outline: none;
-      margin-left: 0.5rem;
-    }
-
-    .container smartphone .copy {
-      height: 1.5rem;
-      cursor: pointer;
-      display: inline-block;
-      vertical-align: middle;
-      margin-right: 0.5rem;
-    }
-
-    .container smartphone a {
-      color: #f5c012;
-      text-decoration: underline;
-      text-underline-offset: 0.5rem;
-    }
-
-    .container smartphone a:hover {
-      color: #b08b10;
-      text-decoration: underline;
-      text-underline-offset: 0.5rem;
-    }
-
-    .container smartphone .nubank {
-      height: 1.5rem;
-    }
-
-    a.left {
-      float: left;
-    }
-
-    a.right {
-      float: right;
-    }
-
-    footer div {
-      width: 80%;
-    }
-  </style>
-  <script src="js/clipboardtext.js"></script>
+  <link href="./style/style.css" rel="stylesheet">
 </head>
 
-<body>
-  <div class="container">
-    <input type="text" />
+<body class="d-flex text-center text-white bg-dark ">
+  <noscript>
+    <div>Para continuar habilite o JavaScript</div>
+  </noscript>
 
-    <button>Salvar</button>
 
-    <canvas width="1080" height="1080"></canvas>
+  <div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
+    <header class="mb-auto d-flex justify-content-center">
+      <canvas width="1080" height="1080"></canvas>
+    </header>
 
-    <footer>
+    <main class="px-3">
       <div>
-        <a href="https://github.com/alvaroreis/bolsonaro2turno" class="left" target="_blank">
-          <img src="img/github-logo.svg" />
-          <span style="text-transform: uppercase;">alvaroreis/bolsonaro2turno</span>
-        </a>
-        <a href="https://github.com/alvaroreis" class="right" target="_blank">
-          <span style="text-transform: uppercase;">quem sou eu?</span>
-        </a>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="Informe seu nome" aria-label="Informe seu nome"
+            aria-describedby="basic-addon1">
+        </div>
+
+        <div class="btn-group  btn-block" role="group" aria-label="Ações">
+          <div class="btn-group" role="group">
+            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Compartilhar
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+              <li><a class="dropdown-item" id="shareImage">Imagem</a></li>
+              <li><a class="dropdown-item" id="shareLink">Link</a></li>
+            </ul>
+          </div>
+          <button type="button" id="save" class="btn btn-success btn-block fw-bold pl-4 pr-4">Salvar</button>
+        </div>
+        <br />
+      </div>
+
+    </main>
+
+    <footer class="mt-3 text-white-50 px-3">
+      <div class="row d-none d-md-inline-flex w-100">
+
+        <div class="col-md-4">
+          <p class="text-start">
+            <img src="img/github.png" height="20" />
+            <a href="https://github.com/alvaroreis/bolsonaro2turno" target="_blank" class="text-white">
+              Repositório
+            </a>
+          </p>
+        </div>
+        <div class="col-md-3">
+          <p class="text-center">
+            <img src="./img/instagram.png" height="20" alt="Instagram">
+            <a href="https://www.instagram.com/_alvaroreis/" target="_blank" class="text-white">Álvaro
+              Barros</a>
+          </p>
+        </div>
+        <div class="col-md-5">
+          <p class="text-end">Desenvolvido por <a href="https://github.com/alvaroreis" target="_blank"
+              class="text-white">Álvaro
+              Barros</a> </p>
+        </div>
+      </div>
+
+      <div class="row d-sm-inline-flex w-100 d-md-none">
+        <div class="col-sm-12 d-sm-inline-flex text-center">
+          <div class="col-sm-6">
+            <p>
+              <img src="img/github.png" height="20" />
+              <a href="https://github.com/alvaroreis/bolsonaro2turno" target="_blank" class="text-white">
+                Repositório
+              </a>
+            </p>
+          </div>
+          <div class="col-sm-6  ">
+            <p>
+              <img src="./img/instagram.png" height="20" alt="Instagram">
+              <a href="https://www.instagram.com/_alvaroreis/" target="_blank" class="text-white">Álvaro
+                Barros</a>
+            </p>
+          </div>
+        </div>
+        <div class="col-sm-12">
+          <p>Desenvolvido por <a href="https://github.com/alvaroreis" target="_blank" class="text-white">Álvaro
+              Barros</a> </p>
+        </div>
       </div>
     </footer>
-
-
   </div>
 
-  <script>
+  <script src="./js/names.js"></script>
+  <script src="./js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
 
-    const canvas = document.querySelector("canvas");
-    const context = canvas.getContext("2d");
-
-    const baseImage = new Image();
-    baseImage.src = "./img/base.png";
-
-    const names = [
-      "Jose",
-      "João",
-      "Joao",
-      "Antônio",
-      "Antonio",
-      "Francisco",
-      "Carlos",
-      "Paulo",
-      "Pedro",
-      "Lucas",
-      "Luiz",
-      "Luíz",
-      "Marcos",
-      "Luis",
-      "Luís",
-      "Gabriel",
-      "Rafael",
-      "Daniel",
-      "Marcelo",
-      "Bruno",
-      "Eduardo",
-      "Felipe",
-      "Raimundo",
-      "Rodrigo",
-      "Manoel",
-      "Mateus",
-      "André",
-      "André",
-      "Fernando",
-      "Fábio",
-      "Fabio",
-      "Leonardo",
-      "Gustavo",
-      "Guilherme",
-      "Leandro",
-      "Tiago",
-      "Ânderson",
-      "Anderson",
-      "Ricardo",
-      "Márcio",
-      "Marcio",
-      "Jorge",
-      "Sebastião",
-      "Sebastiao",
-      "Alexandre",
-      "Roberto",
-      "Édson",
-      "Edson",
-      "Diego",
-      "Vítor",
-      "Vitor",
-      "Sérgio",
-      "Sergio",
-      "Cláudio",
-      "Claudio",
-      "Matheus",
-      "Thiago",
-      "Geraldo",
-      "Adriano",
-      "Luciano",
-      "Júlio",
-      "Julio",
-      "Renato",
-      "Alex",
-      "Vinícius",
-      "Vinicius",
-      "Rogério",
-      "Rogerio",
-      "Samuel",
-      "Ronaldo",
-      "Mário",
-      "Mario",
-      "Flávio",
-      "Flavio",
-      "Ígor",
-      "Igor",
-      "Douglas",
-      "Daví",
-      "Davi",
-      "Manuel",
-      "Maria",
-      "Ana",
-      "Francisca",
-      "Antônia",
-      "Antonia",
-      "Adriana",
-      "Juliana",
-      "Márcia",
-      "Marcia",
-      "Fernanda",
-      "Patricia",
-      "Patrícia",
-      "Aline",
-      "Sandra",
-      "Camila",
-      "Amanda",
-      "Bruna",
-      "Jéssica",
-      "Jessica",
-      "Leticia",
-      "Letícia",
-      "Júlia",
-      "Julia",
-      "Luciana",
-      "Vanessa",
-      "Mariana",
-      "Gabriela",
-      "Vera",
-      "Vitória",
-      "Vitoria",
-      "Larissa",
-      "Cláudia",
-      "Claudia",
-      "Beatriz",
-      "Luana",
-      "Rita",
-      "Sônia",
-      "Sonia",
-      "Renata",
-      "Eliane",
-      "Josefa",
-      "Simone",
-      "Natália",
-      "Natalia",
-      "Cristiane",
-      "Carla",
-      "Débora",
-      "Debora",
-      "Rosângela",
-      "Rosangela",
-      "Jaqueline",
-      "Rosa",
-      "Daniela",
-      "Aparecida",
-      "Marlene",
-      "Terezinha",
-      "Raimunda",
-      "Andréia",
-      "Andreia",
-      "Fabiana",
-      "Lúcia",
-      "Lucia",
-      "Raquel",
-      "Ângela",
-      "Angela",
-      "Rafaela",
-      "Joana",
-      "Luzía",
-      "Luzia",
-      "Elaine",
-      "Daniele",
-      "Regina",
-      "Dáiane",
-      "Daiane",
-      "Suelí",
-      "Sueli",
-      "Alessandra",
-      "Isabel",
-    ];
-
-    document.querySelector("input").value =
-      names[Math.floor(Math.random() * names.length)];
-
-    document.querySelector("button").addEventListener("click", () => {
-      const a = document.createElement("a");
-      a.setAttribute("href", canvas.toDataURL("image/png"));
-      a.setAttribute(
-        "download",
-        document.querySelector("input").value.trim()
-      );
-      a.click();
-    });
-
-    function roundRect(
-      ctx,
-      x,
-      y,
-      width,
-      height,
-      radius = 5,
-      fill = false,
-      stroke = true
-    ) {
-      if (typeof radius === "number") {
-        radius = { tl: radius, tr: radius, br: radius, bl: radius };
-      } else {
-        radius = { ...{ tl: 0, tr: 0, br: 0, bl: 0 }, ...radius };
-      }
-      ctx.beginPath();
-      ctx.moveTo(x + radius.tl, y);
-      ctx.lineTo(x + width - radius.tr, y);
-      ctx.quadraticCurveTo(x + width, y, x + width, y + radius.tr);
-      ctx.lineTo(x + width, y + height - radius.br);
-      ctx.quadraticCurveTo(
-        x + width,
-        y + height,
-        x + width - radius.br,
-        y + height
-      );
-      ctx.lineTo(x + radius.bl, y + height);
-      ctx.quadraticCurveTo(x, y + height, x, y + height - radius.bl);
-      ctx.lineTo(x, y + radius.tl);
-      ctx.quadraticCurveTo(x, y, x + radius.tl, y);
-      ctx.closePath();
-      ctx.fill();
-    }
-
-    baseImage.addEventListener("load", () => {
-      function draw() {
-        context.clearRect(0, 0, canvas.width, canvas.height);
-        context.drawImage(baseImage, 0, 0);
-
-        context.save();
-
-        context.translate(540, 360);
-        context.rotate((-2 * Math.PI) / 180);
-
-        context.textBaseline = "middle";
-        context.font = "196.13px Bebas Neue";
-        const width = context.measureText(
-          document.querySelector("input").value.trim()
-        ).width;
-
-        // context.fillStyle = "#1da60e";
-        context.fillStyle = "#19bb4c";
-        roundRect(
-          context,
-          -width / 2 - 40,
-          -220 / 2,
-          width + 40 * 2,
-          210,
-          21.66
-        );
-
-        context.fillStyle = "#f0f0f0";
-        context.fillText(
-          document.querySelector("input").value.trim(),
-          -width / 2,
-          20
-        );
-
-        context.restore();
-
-        setTimeout(draw, 100);
-      }
-
-      draw();
-    });
-  </script>
 </body>
 
 </html>
