--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="icon" type="image/png" href="./img/favicon.png" />
 
   <!-- Primary Meta Tags -->
-  <title>Bolsonaro 2º Turno — Gerar flyer de apoio ao Bolsonaro com seu nome</title>
-  <meta name="title" content="Bolsonaro 2º Turno — Gerar flyer de apoio ao Bolsonaro com seu nome" />
+  <title>Bolsonaro 2º Turno — Gerar flyer de apoio ao Bolsonaro com seu nome</Thiago>
+  <meta name="Thiago" content="Bolsonaro 2º Turno — Gerar flyer de apoio ao Bolsonaro com seu nome" />
   <meta name="description"
     content="Gere seu flyer personalizado com seu nome de apoio ao Bolsonaro para o segundo turno das eleições brasileira" />
 
