--- a/index.html
+++ b/index.html
@@ -45,14 +45,30 @@
     <div>Para continuar habilite o JavaScript</div>
   </noscript>
 
-
   <div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
     <header class="mb-auto d-flex justify-content-center">
       <canvas width="1080" height="1080"></canvas>
     </header>
 
     <main class="px-3">
-      <div>
+
+      <div class="input-group">
+        <input type="text" class="form-control" aria-label="Informe seu nome" placeholder="Informe seu nome">
+        <button type="button" id="save" class=" btn btn-success fw-bold pl-4 pr-4">Salvar</button>
+        <button type="button" class="btn btn btn-primary dropdown-toggle dropdown-toggle-split"
+          data-bs-toggle="dropdown" aria-expanded="false" value="Compartilhar">
+          <span class="p-1">Compartilhar</span>
+        </button>
+        <ul class="dropdown-menu dropdown-menu-end">
+          <li><a class="dropdown-item" id="shareImage">Imagem</a></li>
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+          <li><a class="dropdown-item" id="shareLink">Link da página</a></li>
+        </ul>
+      </div>
+
+      <!-- <div>
         <div class="input-group mb-3">
           <input type="text" class="form-control" placeholder="Informe seu nome" aria-label="Informe seu nome"
             aria-describedby="basic-addon1">
@@ -72,29 +88,41 @@
           <button type="button" id="save" class="btn btn-success btn-block fw-bold pl-4 pr-4">Salvar</button>
         </div>
         <br />
-      </div>
+      </div> -->
 
+      <p class="px-3 mt-3"> Colabore com esse projeto <a target="_blank"
+          href="https://nubank.com.br/pagar/4ca3x/0fyqDWa5qY" class="link-warning">clicando aqui</a>.</p>
     </main>
 
-    <footer class="mt-3 text-white-50 px-3">
+    <footer class="mt-auto text-white-50 px-3">
       <div class="row d-none d-md-inline-flex w-100">
 
-        <div class="col-md-4">
-          <p class="text-start">
+        <div class="col-md-2">
+          <p class="text-center">
             <img src="img/github.png" height="20" />
             <a href="https://github.com/alvaroreis/bolsonaro2turno" target="_blank" class="text-white">
               Repositório
             </a>
           </p>
         </div>
-        <div class="col-md-3">
+
+        <div class="col-md-2">
+          <p class="text-center">
+            <img src="img/linkedin.png" height="20" />
+            <a href="https://www.linkedin.com/in/reisalvaro/" target="_blank" class="text-white">
+              reisalvaro
+            </a>
+          </p>
+        </div>
+        <div class="col-md-2">
           <p class="text-center">
             <img src="./img/instagram.png" height="20" alt="Instagram">
-            <a href="https://www.instagram.com/_alvaroreis/" target="_blank" class="text-white">Álvaro
-              Barros</a>
+            <a href="https://www.instagram.com/_alvaroreis/" target="_blank" class="text-white">_alvaroreis</a>
           </p>
         </div>
         <div class="col-md-5">
+
+          <br />
           <p class="text-end">Desenvolvido por <a href="https://github.com/alvaroreis" target="_blank"
               class="text-white">Álvaro
               Barros</a> </p>
@@ -103,7 +131,7 @@
 
       <div class="row d-sm-inline-flex w-100 d-md-none">
         <div class="col-sm-12 d-sm-inline-flex text-center">
-          <div class="col-sm-6">
+          <div class="col-sm-4">
             <p>
               <img src="img/github.png" height="20" />
               <a href="https://github.com/alvaroreis/bolsonaro2turno" target="_blank" class="text-white">
@@ -111,11 +139,16 @@
               </a>
             </p>
           </div>
-          <div class="col-sm-6  ">
+          <div class="col-sm-4">
+            <p>
+              <img src="./img/linkedin.png" height="20" alt="Instagram">
+              <a href="https://www.linkedin.com/in/reisalvaro/" target="_blank" class="text-white">reisalvaro</a>
+            </p>
+          </div>
+          <div class="col-sm-4">
             <p>
               <img src="./img/instagram.png" height="20" alt="Instagram">
-              <a href="https://www.instagram.com/_alvaroreis/" target="_blank" class="text-white">Álvaro
-                Barros</a>
+              <a href="https://www.instagram.com/_alvaroreis/" target="_blank" class="text-white">_alvaroreis</a>
             </p>
           </div>
         </div>
