feat: add victory message

--- a/types/simple/index.html
+++ b/types/simple/index.html
@@ -108,8 +108,11 @@
                     </ul>
                 </div>
 
-                <p class="px-3 mt-3"> Colabore com esse projeto <a target="_blank"
-                        href="https://nubank.com.br/pagar/4ca3x/0fyqDWa5qY" class="link-warning">clicando aqui</a>.</p>
+                <p class="px-3 mt-3">
+                    <span class="text-warning text-uppercase"> Amanhã vamos ter o Flyes da vitória!</span> <br />
+                    Colabore com esse projeto <a target="_blank" href="https://nubank.com.br/pagar/4ca3x/0fyqDWa5qY"
+                        class="link-warning">clicando aqui</a>.
+                </p>
             </main>
 
             <footer class="mt-auto text-white-50 px-3">
