--- a/types/simple/index.html
+++ b/types/simple/index.html
@@ -109,7 +109,7 @@
                 </div>
 
                 <p class="px-3 mt-3">
-                    <span class="text-warning text-uppercase"> Amanhã vamos ter o Flyes da vitória!</span> <br />
+                    <span class="text-warning text-uppercase"> Amanhã vamos ter o Flyer da vitória!</span> <br />
                     Colabore com esse projeto <a target="_blank" href="https://nubank.com.br/pagar/4ca3x/0fyqDWa5qY"
                         class="link-warning">clicando aqui</a>.
                 </p>
