feat: update metadata and style

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <canvas width="1080" height="1080"></canvas>
       </header>
 
-      <main class="px-4 mx-4">
+      <main class=" mx-4">
 
         <div class="input-group">
           <input type="text" id="tipo-padrao" class="form-control" aria-label="Informe seu nome"
