--- a/types/simple/index.html
+++ b/types/simple/index.html
@@ -13,19 +13,20 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://alvaroreis.github.io/bolsonaro2turno/" />
+    <meta property="og:url" content="https://alvaroreis.github.io/bolsonaro2turno/types/simple/" />
     <meta property="og:title" content="Bolsonaro 2º Turno — Gerar flyer de apoio ao Bolsonaro com seu nome" />
     <meta property="og:description"
         content="Gere seu flyer personalizado com seu nome de apoio ao Bolsonaro para o segundo turno das eleições brasileira" />
-    <meta property="og:image" itemprop="image" content="https://alvaroreis.github.io/bolsonaro2turno/metadata.png" />
+    <meta property="og:image" itemprop="image"
+        content="https://alvaroreis.github.io/bolsonaro2turno/types/simple/metadata.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://alvaroreis.github.io/bolsonaro2turno/" />
+    <meta property="twitter:url" content="https://alvaroreis.github.io/bolsonaro2turno/types/simple/" />
     <meta property="twitter:title" content="Bolsonaro 2º Turno — Gerar flyer de apoio ao Bolsonaro com seu nome" />
     <meta property="twitter:description"
         content="Gere seu flyer personalizado com seu nome de apoio ao Bolsonaro para o segundo turno das eleições brasileira" />
-    <meta property="twitter:image" content="https://alvaroreis.github.io/bolsonaro2turno/metadata.png" />
+    <meta property="twitter:image" content="https://alvaroreis.github.io/bolsonaro2turno/types/simple/metadata.png" />
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -108,7 +109,7 @@
                     </ul>
                 </div>
 
-                <p class="px-3 mt-3">
+                <p class="mt-3">
                     <span class="text-warning text-uppercase"> Amanhã vamos ter o Flyer da vitória!</span> <br />
                     Colabore com esse projeto <a target="_blank" href="https://nubank.com.br/pagar/4ca3x/0fyqDWa5qY"
                         class="link-warning">clicando aqui</a>.
@@ -185,7 +186,7 @@
             </footer>
         </div>
     </div>
-    <script src="./js/names.js"></script>
+    <script src="../../js/names.js"></script>
     <script src="./js/script.js"></script>
     <script src="./js/share.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
