--- a/types/simple/index.html
+++ b/types/simple/index.html
@@ -59,8 +59,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page"
-                            href="https://alvaroreis.github.io/bolsonaro2turno/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -68,8 +67,7 @@
                             Modelos
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item"
-                                    href="https://alvaroreis.github.io/bolsonaro2turno/types/simple/index.html">
+                            <li><a class="dropdown-item" href="index.html">
                                     <img src="./metadata.png" height="30px"> Amarelo (Tag) </a></li>
                             <!-- <li>
                     <hr class="dropdown-divider">
