--- a/types/simple/index.html
+++ b/types/simple/index.html
@@ -88,8 +88,7 @@
                 <canvas width="1080" height="1080"></canvas>
             </header>
 
-            <main class="px-4 mx-4">
-
+            <main class=" mx-4">
                 <div class="input-group">
                     <input type="text" class="form-control" id="tipo-tag" aria-label="Informe seu nome"
                         placeholder="Informe seu nome">
