fix: share image

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <body class="bg-dark">
   <noscript>
-    <div>Para continuar habilite o JavaScript</div>
+    Para continuar habilite o JavaScript
   </noscript>
 
   <nav class="navbar navbar-expand-lg navbar-dark ">
@@ -56,14 +56,14 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="https://alvaroreis.github.io/bolsonaro2turno">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Modelos
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="./types/simple/index.html">
+              <li><a class="dropdown-item" href="https://alvaroreis.github.io/bolsonaro2turno/types/simple/">
                   <img src="./types/simple/metadata.png" height="30px"> Amarelo (Tag) </a></li>
               <!-- <li>
                 <hr class="dropdown-divider">
