--- a/types/simple/index.html
+++ b/types/simple/index.html
@@ -43,7 +43,7 @@
 
 <body class="bg-dark">
     <noscript>
-        <div>Para continuar habilite o JavaScript</div>
+        Para continuar habilite o JavaScript
     </noscript>
 
     <nav class="navbar navbar-expand-lg navbar-dark ">
@@ -59,7 +59,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
+                        <a class="nav-link active" aria-current="page"
+                            href="https://alvaroreis.github.io/bolsonaro2turno/">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -67,7 +68,8 @@
                             Modelos
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="index.html">
+                            <li><a class="dropdown-item"
+                                    href="https://alvaroreis.github.io/bolsonaro2turno/types/simple/">
                                     <img src="./metadata.png" height="30px"> Amarelo (Tag) </a></li>
                             <!-- <li>
                     <hr class="dropdown-divider">
