feat: add victory

--- a/types/brasil/index.html
+++ b/types/brasil/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta name="author" content="Álvaro Barros">
-  <link rel="icon" type="image/png" href="./img/favicon.png" />
+  <link rel="icon" type="image/png" href="../../img/favicon.png" />
+
 
   <!-- Primary Meta Tags -->
   <title>Bolsonaro 2º Turno — Gerar flyer de apoio ao Bolsonaro com seu nome</title>
@@ -13,19 +14,20 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://alvaroreis.github.io/bolsonaro2turno/" />
+  <meta property="og:url" content="https://alvaroreis.github.io/bolsonaro2turno/types/brasil/" />
   <meta property="og:title" content="Bolsonaro 2º Turno — Gerar flyer de apoio ao Bolsonaro com seu nome" />
   <meta property="og:description"
     content="Gere seu flyer personalizado com seu nome de apoio ao Bolsonaro para o segundo turno das eleições brasileira" />
-  <meta property="og:image" itemprop="image" content="https://alvaroreis.github.io/bolsonaro2turno/metadata.png" />
+  <meta property="og:image" itemprop="image"
+    content="https://alvaroreis.github.io/bolsonaro2turno/types/brasil/metadata.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://alvaroreis.github.io/bolsonaro2turno/" />
+  <meta property="twitter:url" content="https://alvaroreis.github.io/bolsonaro2turno/types/brasil/" />
   <meta property="twitter:title" content="Bolsonaro 2º Turno — Gerar flyer de apoio ao Bolsonaro com seu nome" />
   <meta property="twitter:description"
     content="Gere seu flyer personalizado com seu nome de apoio ao Bolsonaro para o segundo turno das eleições brasileira" />
-  <meta property="twitter:image" content="https://alvaroreis.github.io/bolsonaro2turno/metadata.png" />
+  <meta property="twitter:image" content="https://alvaroreis.github.io/bolsonaro2turno/types/brasil/metadata.png" />
 
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -37,7 +39,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
-  <link href="./style/style.css" rel="stylesheet">
+  <link href="../../style/style.css" rel="stylesheet">
 </head>
 
 <body class="bg-dark">
@@ -47,9 +49,9 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="https://alvaroreis.github.io/bolsonaro2turno"><strong class="text-primary">Flyer
+      <a class="navbar-brand" href="https://alvaroreis.github.io/bolsonaro2turno"><strong class="text-success">Flyer
           Bolsonaro</strong></a>
-      <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -64,10 +66,10 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="https://alvaroreis.github.io/bolsonaro2turno/types/brasil/">
-                  <img src="./types/brasil/metadata.png" height="30px"> Brandeira do Brasil </a></li>
+                  <img src="./metadata.png" height="30px"> Brandeira do Brasil </a></li>
               <hr class="dropdown-divider">
               <li><a class="dropdown-item" href="https://alvaroreis.github.io/bolsonaro2turno/types/simple/">
-                  <img src="./types/simple/metadata.png" height="30px"> Amarelo (Tag) </a></li>
+                  <img src="../simple/metadata.png" height="30px"> Amarelo (Tag) </a></li>
             </ul>
           </li>
         </ul>
@@ -86,7 +88,7 @@
       <main class=" mx-4">
 
         <div class="input-group">
-          <input type="text" id="tipo-vitoria" class="form-control" aria-label="Informe seu nome"
+          <input type="text" id="tipo-padrao" class="form-control" aria-label="Informe seu nome"
             placeholder="Informe seu nome">
           <button type="button" id="save" class=" btn btn-success fw-bold pl-4 pr-4">Salvar</button>
           <button type="button" class="btn btn btn-primary dropdown-toggle dropdown-toggle-split"
@@ -116,7 +118,7 @@
 
           <div class="col-md-2">
             <p class="text-center">
-              <img src="img/github.png" height="20" />
+              <img src="../../img/github.png" height="20" />
               <a href="https://github.com/alvaroreis/bolsonaro2turno" target="_blank" class="text-white">
                 Repositório
               </a>
@@ -125,7 +127,7 @@
 
           <div class="col-md-2">
             <p class="text-center">
-              <img src="img/linkedin.png" height="20" />
+              <img src="../../img/linkedin.png" height="20" />
               <a href="https://www.linkedin.com/in/reisalvaro/" target="_blank" class="text-white">
                 reisalvaro
               </a>
@@ -133,12 +135,11 @@
           </div>
           <div class="col-md-2">
             <p class="text-center">
-              <img src="./img/instagram.png" height="20" alt="Instagram">
+              <img src="../../img/instagram.png" height="20" alt="Instagram">
               <a href="https://www.instagram.com/_alvaroreis/" target="_blank" class="text-white">_alvaroreis</a>
             </p>
           </div>
           <div class="col-md-5">
-
             <br />
             <p class="text-end">Desenvolvido por <a href="https://github.com/alvaroreis" target="_blank"
                 class="text-white">Álvaro
@@ -150,7 +151,7 @@
           <div class="col-sm-12 d-sm-inline-flex text-center">
             <div class="col-sm-4">
               <p>
-                <img src="img/github.png" height="20" />
+                <img src="../../img/github.png" height="20" />
                 <a href="https://github.com/alvaroreis/bolsonaro2turno" target="_blank" class="text-white">
                   Repositório
                 </a>
@@ -158,13 +159,13 @@
             </div>
             <div class="col-sm-4">
               <p>
-                <img src="./img/linkedin.png" height="20" alt="Instagram">
+                <img src="../../img/linkedin.png" height="20" alt="Instagram">
                 <a href="https://www.linkedin.com/in/reisalvaro/" target="_blank" class="text-white">reisalvaro</a>
               </p>
             </div>
             <div class="col-sm-4">
               <p>
-                <img src="./img/instagram.png" height="20" alt="Instagram">
+                <img src="../../img/instagram.png" height="20" alt="Instagram">
                 <a href="https://www.instagram.com/_alvaroreis/" target="_blank" class="text-white">_alvaroreis</a>
               </p>
             </div>
@@ -177,9 +178,9 @@
       </footer>
     </div>
   </div>
-  <script src="./js/names.js"></script>
+  <script src="../../js/names.js"></script>
   <script src="./js/script.js"></script>
-  <script src="./js/share.js"></script>
+  <script src="../../js/share.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
