--- a/types/simple/index.html
+++ b/types/simple/index.html
@@ -69,12 +69,12 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
+                                    href="https://alvaroreis.github.io/bolsonaro2turno/types/brasil/">
+                                    <img src="../brasil/metadata.png" height="30px"> Brandeira do Brasil </a></li>
+                            <hr class="dropdown-divider">
+                            <li><a class="dropdown-item"
                                     href="https://alvaroreis.github.io/bolsonaro2turno/types/simple/">
                                     <img src="./metadata.png" height="30px"> Amarelo (Tag) </a></li>
-                            <!-- <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li> -->
                         </ul>
                     </li>
                 </ul>
@@ -108,8 +108,10 @@
                     </ul>
                 </div>
 
-                <p class="mt-3">
-                    <span class="text-warning text-uppercase"> Amanhã vamos ter o Flyer da vitória!</span> <br />
+                <p class="px-3 mt-3">
+                    <span class="text-warning text-uppercase font-monospace"> Muito obrigado a todos que compartilharam
+                        esse
+                        link!</span> <br />
                     Colabore com esse projeto <a target="_blank" href="https://nubank.com.br/pagar/4ca3x/0fyqDWa5qY"
                         class="link-warning">clicando aqui</a>.
                 </p>
@@ -187,7 +189,7 @@
     </div>
     <script src="../../js/names.js"></script>
     <script src="./js/script.js"></script>
-    <script src="./js/share.js"></script>
+    <script src="../../js/share.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
